--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=c1m8-property-service
+spring.application.name=property-service
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/propertydb
+spring.datasource.username=postgres
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
